# mlx-skills

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  SKILLS_UPDATE.md  pyproject.toml
mlx_skills/: __init__.py  cli.py  validate.py
mlx_skills/skills/fast-mlx/: SKILL.md
mlx_skills/skills/fast-mlx/references/: compute-optimization.md  dit-optimization.md  fast-mlx-guide.md  llm-optimization.md
mlx_skills/skills/mlx/: SKILL.md
mlx_skills/skills/mlx-lm/: SKILL.md
mlx_skills/skills/mlx-lm/references/: architecture.md  patterns.md
mlx_skills/skills/mlx/references/: anti-patterns.md  debugging.md  ecosystem.md  fundamentals.md  nn-and-training.md  patterns.md  porting-guide.md
mlx_skills/skills/mlx/scripts/: check_updates.py
scripts/: check_updates.py
tests/: conftest.py  test_check_updates.py  test_cli.py  test_skill_structure.py  test_validate.py
