[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-skills"
version = "0.4.1"
description = "Skills that teach AI coding assistants how MLX works."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.urls]
Repository = "https://github.com/awni/mlx-skills"

[project.scripts]
mlx-skills = "mlx_skills.cli:main"
mlx-skills-validate = "mlx_skills.validate:main"

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mlx_skills*"]

[tool.setuptools.package-data]
mlx_skills = ["skills/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
